# aspire-demo

./: .env.example  .gitignore  Makefile  README.md  demo.sh  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  errors.py
app/api/v1/: router.py  webhook.py
app/core/: config.py  exceptions.py  logging.py
app/db/: session.py
app/integrations/ai/: base.py  fallback.py  gemini.py
app/integrations/ai/prompts/: lead_scoring.py
app/integrations/notifications/: base.py  brevo.py  noop.py  slack.py
app/integrations/sheets/: base.py  google_sheets.py  sqlite_repo.py
app/models/: lead.py
app/schemas/: lead.py  webhook.py
app/services/: filtering.py  lead_qualifier.py  validation.py
docs/: ADR.md  API_CONTRACT.md  DATABASE_SCHEMA.md  FOLDER_STRUCTURE.md  IMPLEMENTATION_PLAN.md  SEQUENCE_DIAGRAM.md
tests/: conftest.py
tests/fixtures/: leads.py
tests/integration/: test_webhook.py
tests/unit/: test_filtering.py  test_validation.py
