[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-qualifier"
version = "1.0.0"
description = "AI-powered Lead Qualification & Response Automation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "google-genai>=1.0",
    "google-auth>=2.0",
    "gspread>=6.0",
    "sib-api-v3-sdk>=7.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "black>=24.0",
    "pre-commit>=3.0",
]

[project.urls]
Home = "https://github.com/your-org/lead-qualifier"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]